--- a/app/src/main/res/layout/activity_get_amount.xml
+++ b/app/src/main/res/layout/activity_get_amount.xml
@@ -5,48 +5,53 @@
     android:id="@+id/activity_get_amount"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     tools:context="com.bhatnagar.arpit.wallet.UI.GetAmount">
 
     <TextView
-        android:text="Phone Number" android:textSize="20sp" android:gravity="center_horizontal|center_vertical"
-        android:layout_width="match_parent" android:layout_height="wrap_content"/>
+        android:layout_width="match_parent" android:layout_height="wrap_content"
+        android:gravity="center_horizontal|center_vertical"
+        android:text="Phone Number" android:textSize="20sp"/>
 
     <LinearLayout
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal" android:weightSum="100"
-        android:layout_width="match_parent" android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:layout_marginTop="20dp"
+        android:orientation="horizontal" android:weightSum="100">
+
         <EditText
-            android:gravity="center" android:textAlignment="center"
-            android:layout_weight="70" android:id="@+id/Number"
-            android:maxLength="10" android:maxLines="1" android:inputType="number"
-            android:layout_width="0dp" android:layout_height="wrap_content"/>
+            android:id="@+id/Number" android:layout_width="0dp"
+            android:layout_height="wrap_content" android:layout_weight="70"
+            android:gravity="center" android:inputType="number" android:maxLength="10"
+            android:maxLines="1" android:textAlignment="center"/>
+
         <Button
-            android:text="Scan" android:layout_weight="30" android:id="@+id/Scan"
-            android:layout_width="0dp" android:layout_height="wrap_content"/>
+            android:id="@+id/Scan" android:layout_width="0dp" android:layout_height="wrap_content"
+            android:layout_weight="30" android:text="Scan"/>
     </LinearLayout>
 
     <TextView
-        android:layout_marginTop="20dp"
-        android:text="Amount:" android:textSize="20sp" android:gravity="center_horizontal|center_vertical"
-        android:layout_width="match_parent" android:layout_height="wrap_content"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:layout_marginTop="20dp"
+        android:gravity="center_horizontal|center_vertical"
+        android:text="Amount:" android:textSize="20sp"/>
 
     <EditText
-        android:textAlignment="center"
-        android:inputType="numberDecimal" android:gravity="center"
-        android:maxLength="6" android:maxLines="1" android:id="@+id/Amount"
-        android:layout_width="match_parent" android:layout_height="wrap_content"/>
+        android:id="@+id/Amount"
+        android:layout_width="match_parent" android:layout_height="wrap_content"
+        android:gravity="center" android:inputType="numberDecimal" android:maxLength="6"
+        android:maxLines="1" android:textAlignment="center"/>
 
     <RelativeLayout
         android:layout_width="match_parent" android:layout_height="match_parent">
+
         <Button
             android:id="@+id/Next"
-            android:layout_alignParentBottom="true" android:text="Next"
-            android:layout_width="match_parent" android:layout_height="wrap_content"/>
+            android:layout_width="match_parent" android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true" android:text="Next"/>
     </RelativeLayout>
 
 </LinearLayout>
