--- a/app/src/main/res/layout/activity_offline_qr.xml
+++ b/app/src/main/res/layout/activity_offline_qr.xml
@@ -5,26 +5,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.bhatnagar.arpit.wallet.UI.OfflineQR">
+
     <TextView
+        android:id="@+id/Number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:background="@color/zxing_possible_result_points"
-        android:gravity="center_horizontal|center_vertical"
-        android:padding="10dp"
-        android:textSize="20sp" android:text="Get this Qr Code scanned from the Vendor"
-        android:id="@+id/Number" android:layout_alignParentTop="true"
-        android:layout_width="match_parent" android:layout_height="wrap_content"/>
+        android:gravity="center_horizontal|center_vertical" android:padding="10dp"
+        android:text="Get this Qr Code scanned from the Vendor" android:textSize="20sp"/>
 
     <ImageView
         android:id="@+id/QR"
-        android:layout_below="@id/Number" android:layout_above="@+id/Next"
-        android:layout_gravity="center_horizontal|center_vertical"
-        android:layout_margin="20dp"
         android:layout_width="match_parent" android:layout_height="wrap_content"
+        android:layout_above="@+id/Next"
+        android:layout_below="@id/Number"
+        android:layout_gravity="center_horizontal|center_vertical" android:layout_margin="20dp"
         android:scaleType="center"/>
 
     <TextView
-        android:padding="5dp"
-        android:id="@+id/Next" android:background="@android:color/holo_green_light"
-        android:textSize="30sp" android:gravity="center_horizontal|center_vertical"
-        android:layout_alignParentBottom="true" android:text="Next"
-        android:layout_width="match_parent" android:layout_height="wrap_content"/>
+        android:id="@+id/Next"
+        android:layout_width="match_parent" android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" android:background="@android:color/holo_green_light"
+        android:gravity="center_horizontal|center_vertical" android:padding="5dp"
+        android:text="Next" android:textSize="30sp"/>
 </RelativeLayout>
