--- a/app/src/main/res/layout/activity_receive_payment.xml
+++ b/app/src/main/res/layout/activity_receive_payment.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.bhatnagar.arpit.wallet.UI.ReceivePayment">
 
     <TextView
-        android:padding="20dp" android:id="@+id/Scan"
-        android:textSize="20sp" android:gravity="center"
+        android:id="@+id/Scan" android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:layout_centerInParent="true"
         android:background="@color/zxing_possible_result_points"
-        android:layout_centerInParent="true" android:text="Click to Scan Qr Code From Customer"
-        android:layout_width="match_parent" android:layout_height="wrap_content"/>
+        android:gravity="center" android:padding="20dp"
+        android:text="Click to Scan Qr Code From Customer" android:textSize="20sp"/>
 
 </RelativeLayout>
