--- a/app/src/main/res/layout/activity_set_num.xml
+++ b/app/src/main/res/layout/activity_set_num.xml
@@ -7,17 +7,18 @@
     tools:context="com.bhatnagar.arpit.wallet.UI.SetNum">
 
     <EditText
-        android:maxLines="1" android:id="@+id/Num"
-        android:inputType="number" android:maxLength="10"
-        android:textAlignment="center" android:textSize="20sp"
-        android:layout_centerInParent="true" android:hint="Phone Number"
-        android:layout_width="match_parent" android:layout_height="wrap_content"/>
+        android:id="@+id/Num" android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:layout_centerInParent="true"
+        android:hint="Phone Number" android:inputType="number"
+        android:maxLength="10" android:maxLines="1"
+        android:textAlignment="center" android:textSize="20sp"/>
 
     <TextView
-        android:background="@android:color/holo_green_light"
-        android:padding="10dp" android:id="@+id/Set"
-        android:text="Set" android:gravity="center" android:textSize="25sp"
-        android:layout_alignParentBottom="true"
-        android:layout_width="match_parent" android:layout_height="wrap_content"/>
+        android:id="@+id/Set"
+        android:layout_width="match_parent" android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" android:background="@android:color/holo_green_light"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="Set" android:textSize="25sp"/>
 
 </RelativeLayout>
