--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.bhatnagar.arpit.wallet.UI.Splash">
 
     <TextView
-        android:textSize="30sp" android:gravity="center"
-        android:layout_centerInParent="true" android:text="Wallet"
-        android:layout_width="match_parent" android:layout_height="wrap_content"/>
+        android:layout_width="match_parent" android:layout_height="wrap_content"
+        android:layout_centerInParent="true" android:gravity="center"
+        android:text="Wallet" android:textSize="30sp"/>
 
 </RelativeLayout>
